--- a/viewer/index.html
+++ b/viewer/index.html
@@ -2,15 +2,10 @@
 <html lang="en">
   <head>
     <title>Three js and Electron</title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-    </style>
+
   </head>
   <body>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r58/three.min.js"></script>
-    <script src="viewer/renderer.js"></script>
+    <script src="./renderer.js"></script>
   </body>
 </html>
